# HMI_test

./: .gitmodules  CMakeLists.txt  main.cpp  provider.cpp  provider.h  qml.qrc  qtquickcontrols2.conf  updater.cpp  updater.h  worker.cpp  worker.h
qml/: BusyPageForm.ui.qml  DownloadCompleteForm.ui.qml  DownloadForm.ui.qml  HomeForm.ui.qml  InstallationCompleteForm.ui.qml  InstallationForm.ui.qml  NoUpdatesForm.ui.qml  UpdatesAvailableForm.ui.qml  main.qml
